# CPP_Algo_Mag

./: README.md
P21_1_Hammurabi/: readme.md  save.txt
P21_1_Hammurabi — копия/: main.cpp
P21_2_Dynamic_Array/: Array.h  CMakeLists.txt  GoogleTests.cpp  GoogleTestsString.cpp  main.cpp  readme.md
P21_3_QuickSort/: CMakeLists.txt  QuickSort.h  QuickSortTests.cpp  main.cpp  readme.md
P21_4_Dice/: CMakeLists.txt  main.cpp  readme.md
